<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_reset"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/reset"
        android:visible="true" />

    <item
        android:id="@+id/menu_leftColor"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Left Base Color"
        android:visible="true">
        <menu>
            <group android:id="@+id/leftBG">
                <item
                    android:id="@+id/L_B_black"
                    android:title="@string/black" />
                <item
                    android:id="@+id/L_B_blue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/L_B_green"
                    android:title="@string/green" />
                <item
                    android:id="@+id/L_B_orange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/L_B_pink"
                    android:title="@string/pink" />
                <item
                    android:id="@+id/L_B_purple"
                    android:title="@string/purple" />
                <item
                    android:id="@+id/L_B_red"
                    android:title="@string/red" />
                <item
                    android:id="@+id/L_B_white"
                    android:title="@string/white" />
                <item
                    android:id="@+id/L_B_yellow"
                    android:title="@string/yellow" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/menu_leftText"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Left Highlight Color"
        android:visible="true">
        <menu>
            <group android:id="@+id/leftText">
                <item
                    android:id="@+id/L_T_black"
                    android:title="@string/black" />
                <item
                    android:id="@+id/L_T_blue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/L_T_green"
                    android:title="@string/green" />
                <item
                    android:id="@+id/L_T_orange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/L_T_pink"
                    android:title="@string/pink" />
                <item
                    android:id="@+id/L_T_purple"
                    android:title="@string/purple" />
                <item
                    android:id="@+id/L_T_red"
                    android:title="@string/red" />
                <item
                    android:id="@+id/L_T_white"
                    android:title="@string/white" />
                <item
                    android:id="@+id/L_T_yellow"
                    android:title="@string/yellow" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_rightColor"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Right Base Color"
        android:visible="true">
        <menu>
            <group android:id="@+id/rightBG">
                <item
                    android:id="@+id/R_B_black"
                    android:title="@string/black" />
                <item
                    android:id="@+id/R_B_blue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/R_B_green"
                    android:title="@string/green" />
                <item
                    android:id="@+id/R_B_orange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/R_B_pink"
                    android:title="@string/pink" />
                <item
                    android:id="@+id/R_B_purple"
                    android:title="@string/purple" />
                <item
                    android:id="@+id/R_B_red"
                    android:title="@string/red" />
                <item
                    android:id="@+id/R_B_white"
                    android:title="@string/white" />
                <item
                    android:id="@+id/R_B_yellow"
                    android:title="@string/yellow" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_rightText"
        android:checkable="false"
        android:showAsAction="collapseActionView"
        android:title="Right Highlight Color">
        <menu>
            <group android:id="@+id/rightText">
                <item
                    android:id="@+id/R_T_black"
                    android:title="@string/black" />
                <item
                    android:id="@+id/R_T_blue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/R_T_green"
                    android:title="@string/green" />
                <item
                    android:id="@+id/R_T_orange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/R_T_pink"
                    android:title="@string/pink" />
                <item
                    android:id="@+id/R_T_purple"
                    android:title="@string/purple" />
                <item
                    android:id="@+id/R_T_red"
                    android:title="@string/red" />
                <item
                    android:id="@+id/R_T_white"
                    android:title="@string/white" />
                <item
                    android:id="@+id/R_T_yellow"
                    android:title="@string/yellow" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/menu_PointsPerGoal"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="Points Per Goal"
        android:visible="true">
        <menu>
            <group android:id="@+id/pointsPerGoal">
                <item
                    android:id="@+id/PPG_1"
                    android:title="1" />
                <item
                    android:id="@+id/PPG_2"
                    android:title="2" />
                <item
                    android:id="@+id/PPG_3"
                    android:title="3" />
                <item
                    android:id="@+id/PPG_4"
                    android:title="4" />
                <item
                    android:id="@+id/PPG_5"
                    android:title="5" />
                <item
                    android:id="@+id/PPG_6"
                    android:title="6" />
                <item
                    android:id="@+id/PPG_10"
                    android:title="10" />
                <item
                    android:id="@+id/PPG_Other"
                    android:title="Other..." />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_reset_to"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/resetTo"
        android:visible="true">
        <menu>
            <group android:id="@+id/resetScoreTo">
                <item
                    android:id="@+id/RS_0"
                    android:title="0" />
                <item
                    android:id="@+id/RS_4"
                    android:title="4" />
                <item
                    android:id="@+id/RS_Other"
                    android:title="Other..." />
            </group>
        </menu>

    </item>


    <item
        android:id="@+id/win_by_params"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/winBy"
        android:visible="true">
        <menu>
            <group android:id="@+id/win_by_group">
                <item
                    android:id="@+id/W_B_None"
                    android:title="No Winning Point" />
                <item
                    android:id="@+id/_11_2"
                    android:title="11x2" />
                <item
                    android:id="@+id/_15_2"
                    android:title="15x2" />
                <item
                    android:id="@+id/_21_2"
                    android:title="21x2" />
                <item
                    android:id="@+id/_25_2"
                    android:title="25x2" />
                <item
                    android:id="@+id/W_B_Other"
                    android:title="Other..." />
            </group>
        </menu>

    </item>

    <item
        android:id="@+id/menu_file"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/enableDisableFileSave"
        android:visible="true" />


    <item
        android:id="@+id/menu_reset_pref"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/resetPreferences"
        android:visible="true" />


    <item
        android:id="@+id/menu_instructions"
        android:enabled="true"
        android:showAsAction="collapseActionView"
        android:title="@string/instructions"
        android:visible="true" />

</menu>